<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nils.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:text="@string/title"
        android:textSize="32sp"/>

    <ImageView
        android:id="@+id/image_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/body"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/body"
    />

    <ImageView
        android:id="@+id/image_nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/nose"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/nose"
        />

    <ImageView
        android:id="@+id/image_eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eyes"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/eyes"
        />

    <ImageView
        android:id="@+id/image_eyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eyebrows"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/eyebrows"
        />

    <ImageView
        android:id="@+id/image_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shoes"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/shoes"
        />

    <ImageView
        android:id="@+id/image_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/glasses"
        android:visibility="invisible"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/glasses"
        />

    <ImageView
        android:id="@+id/image_arms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arms"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/arms"
        />

    <ImageView
        android:id="@+id/image_mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mouth"
        android:visibility="invisible"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/mouth"
        />

    <ImageView
        android:id="@+id/image_mustache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mustache"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/mustache"
        />

    <ImageView
        android:id="@+id/image_ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ears"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/ears"
        />

    <ImageView
        android:id="@+id/image_hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hat"
        android:visibility="invisible"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/hat"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="420dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox android:id="@+id/checkbox_arms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_ears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"
                android:onClick="onCheckboxClicked"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox android:id="@+id/checkbox_eyebrows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                android:onClick="onCheckboxClicked"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox android:id="@+id/checkbox_glasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"
                android:onClick="onCheckboxClicked"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox android:id="@+id/checkbox_mouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_mustache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                android:onClick="onCheckboxClicked"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox android:id="@+id/checkbox_nose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:onClick="onCheckboxClicked"/>

        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_shoes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/random"
        android:onClick="onRandomButtonClicked" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/random"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/clear"
        android:onClick="onClearButtonClicked" />
</RelativeLayout>
